[package]
name = "ray-peat-rodeo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# CLI
clap = { version = "4.2.4", features = ["derive"] }

# Markdown parsing
markdown-it = "0.6.0"
extract-frontmatter = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Web scraping
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17.1"

# HTML generation
markup = "0.13.1"

# Utils
url = "2.3.1"
base64 = "0.21.3"
urlencoding = "1.0.0"
# isbn = "0.2.0"
chrono = "0.4.31"
fs_extra = "1.3.0"
