[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
lazy_static = "1.4.0"
tera = "1"

[[bin]]
name = "engine"
path = "main.rs"
